Updated spot on projects and fixed css to give all portfolio items the same height

--- a/public/index.html
+++ b/public/index.html
@@ -475,6 +475,8 @@
 
 <p>If you’re not familiar with whiteboarding, check out <a href="https://medium.com/@mollyinglish/the-ninja-skill-for-ux-designers-25f314f8f76c" target="_blank">this</a> awesome Medium article about the process.</p>
 
+<p><img class="img-responsive img-centered" src="/images/whiteboard.png" alt=""></p>
+
 <p><a href="/images/whiteboard.png" data-lightbox="persona" data-title="Screen Shots"><img src="/images/whiteboard.png"/></a>
 <div class="image-caption">Whiteboarding Out the App</div></p>
 
@@ -642,7 +644,7 @@ I had used the filter icon that&rsquo;s part of Andriod design convention. Howev
                     <div class="modal-body">
                         
                         <h2>SpotOn Part 1: Listing A Spot</h2>
-                        <p class="item-intro text-muted">subtitle not set yet</p>
+                        <p class="item-intro text-muted"></p>
 
                         <p><a href: "/http://spotonparking.com/" target=_blank">SpotOn</a> is a new startup that helps marry frustrated drivers looking for parking with people who have driveways not always. Example: I only use my driveway in the evenings. With SpotOn, I can list the spot and rent it out for X amount of money hourly or monthly. If I&rsquo;m a driver and have been searching for parking for the past hour, I can see an available spot near me thanks to SpotOn.</p>
 
@@ -653,7 +655,7 @@ I had used the filter icon that&rsquo;s part of Andriod design convention. Howev
 <p>SpotOn has two site experiences: Listers &amp; Parkers. They wanted to tackle the Listers side first.
 They built a prototype and wanted to validate the design before shipping. Tradecraft came onboard to help.</p>
 
-<p><a href="/images/SpotOnMeeting.jpg" data-lightbox="opportunity" data-title="Opportunity Matrix"><img src="/images/SpotOnMeeting.jpg"/></a>
+<p><img class="img-responsive img-centered" src="/images/SpotOnMeeting.jpg" alt="">
 <div class="image-caption">Reviewing The Prototype</div></p>
 
 <p><strong>Process</strong></p>
@@ -669,50 +671,48 @@ recommendations, quick wins and recommended next steps for SpotOn Parking.</p>
 
 <p>We analyzed the user tests, noting patterns and pain points. Each issue can be categorized as one of discoverability, information input/editing, user orientation or feedback.</p>
 
-<p><a href="/images/OpportunityMatrix.png" data-lightbox="opportunity" data-title="Opportunity Matrix"><img src="/images/OpportunityMatrix.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/OpportunityMatrix.png" alt="">
 <div class="image-caption">Each red dot represents a user&rsquo;s pain point</div></p>
 
 <p><strong>Usability Analysis &amp; Design Recommendations</strong></p>
 
 <p><em>Landing Page Pain Points</em></p>
 
-<p><a href="/images/BeforeLandingPage.png" data-lightbox="opportunity" data-title="Before Landing Page"><img src="/images/BeforeLandingPage.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/BeforeLandingPage.png" alt="">
 <div class="image-caption">This is what the site <em>used</em> to look like</div></p>
 
 <p><em>Design Recommendations</em></p>
 
-<p><a href="/images/AfterLandingPage.png" data-lightbox="opportunity" data-title="Design Recommendations"><img src="/images/AfterLandingPage.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/AfterLandingPage.png" alt="">
 <div class="image-caption">Minimal changes to create an optimal user experience. Overall, the landing page was a quick win.</div></p>
 
 <p><em>Implemented Changes</em></p>
 
-<p><a href="/images/SpotOnLandingPage.png" data-lightbox="opportunity" data-title="SpotOn's Landing Page"><img src="/images/SpotOnLandingPage.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/SpotOnLandingPage.png" alt="">
 <div class="image-caption">Now, users have a clearer understanding of the different spot types.</div></p>
 
 <p><em>Lister&rsquo;s Registration Page Pain Points</em></p>
 
 <p>Once a user decides they want to list a spot, they have to create a profile. Here&rsquo;s what our usability test showed users thought of the process.</p>
 
-<p><a href="/images/BeforeListers2.png" data-lightbox="opportunity" data-title="Lister's Registration Page"><img src="/images/BeforeListers2.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/BeforeListers2" alt="">
 <div class="image-caption">We found that users had the most issues with creating a spot profile.</div></p>
 
 <p><em>Design Recommendations</em></p>
 
-<p><a href="/images/AfterListers1.png" data-lightbox="opportunity" data-title="Information Box"><img src="/images/AfterListers1.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/AfterListers1.png" alt=""></p>
 
-<p><a href="/images/AfterListers4.png" data-lightbox="opportunity" data-title="Design Recommendations"><img src="/images/AfterListers4.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/AfterListers4.png" alt=""></p>
 
 <p><em>Implemented Changes</em></p>
 
-<p><a href="/images/Listers1.png" data-lightbox="opportunity" data-title="Implemented Changes"><img src="/images/Listers1.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/Listers1.png" alt="">
 <div class="image-caption">The information box lets users know immediately what they will need to create their profile.</div></p>
 
-<p><a href="/images/Listers2.png" data-lightbox="opportunity" data-title="Lister's Registration Page"><img src="/images/Listers2.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/Listers2.png" alt="">
 <div class="image-caption">Here, you can that SpotOn implemented our recommendations for simplifying the process.</div></p>
 
-<p><a href="/images/Listers4.png" data-lightbox="opportunity" data-title="Lister's Registration Page"><img src="/images/Listers4.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/Listers4.png" alt="">
 <div class="image-caption">Users can easily block off dates for spot availability.</div></p>
 
 <p><strong>Conclusion &amp; Next Steps</strong></p>
@@ -746,7 +746,7 @@ recommendations, quick wins and recommended next steps for SpotOn Parking.</p>
                     <div class="modal-body">
                         
                         <h2>SpotOn Part 2: Finding A Parking Spot</h2>
-                        <p class="item-intro text-muted">subtitle not set yet</p>
+                        <p class="item-intro text-muted"></p>
 
                         <p><a href: "/http://spotonparking.com/" target=_blank">SpotOn</a> is a new startup that helps marry frustrated drivers looking for parking with people who have driveways not always. Example: I only use my driveway in the evenings. With SpotOn, I can list the spot and rent it out for X amount of money hourly or monthly. If I&rsquo;m a driver and have been searching for parking for the past hour, I can see an available spot near me thanks to SpotOn.</p>
 
@@ -765,47 +765,40 @@ In <a href: "/http://www.paigebennett.com/projects/SpotOn" target=_blank">Part 1
 
 <p>We categorized each pain point as one of discoverability, information input, user orientation and feedback.</p>
 
-<p><a href="/images/Matrix.png" data-lightbox="opportunity" data-title="Opportunity Matrix"><img src="/images/Matrix.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/Matrix.png" alt="">
 <div class="image-caption">Each red dot represents a user&rsquo;s pain point</div></p>
 
 <p><strong>Usability Analysis &amp; Design Recommendations</strong></p>
 
 <p><em>Landing Page Pain Points</em></p>
 
-<p><a href="/images/Parkerspage.png" data-lightbox="opportunity" data-title="Before Landing Page"><img src="/images/Parkerspage.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/Parkerspage.png" alt=""></p>
 
 <p><em>Design Recommendations</em></p>
 
-<p><a href="/images/ParkersLandingPage.png" data-lightbox="opportunity" data-title="Design Recommendations for the Landing Page"><img src="/images/ParkersLandingPage.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/ParkersLandingPage.png" alt=""></p>
 
 <p><em>Spot Availability Page Pain Points</em></p>
 
-<p><a href="/images/spotpage_before.png" data-lightbox="opportunity" data-title="Before Spot Availability Page"><img src="/images/spotpage_before.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/spotpage_before.png" alt=""></p>
 
 <p><em>Design Recommendations</em></p>
 
-<p><a href="/images/spotpage_after.png" data-lightbox="opportunity" data-title="Design Recommendations for the Landing Page"><img src="/images/spotpage_after.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/spotpage_after.png" alt=""></p>
 
 <p><em>Parker&rsquo;s Registration Page Pain Points</em></p>
 
-<p><a href="/images/regpage_before.png" data-lightbox="opportunity" data-title="Before Parker's Registration Page"><img src="/images/regpage_before.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/regpage_before.png" alt=""></p>
 
 <p><em>Design Recommendations</em></p>
 
-<p><a href="/images/regpage_after.png" data-lightbox="opportunity" data-title="After Parker's Registration Page"><img src="/images/regpage_after.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/regpage_after.png" alt=""></p>
 
 <p><em>Quick Wins</em></p>
 
 <p>We recommended the following quick win because it required little resources and could be implemented quickly.</p>
 
-<p><a href="/images/quickwin.png" data-lightbox="opportunity" data-title="Quick Wins"><img src="/images/quickwin.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/quickwin.png" alt=""></p>
 
 <p><strong>Conclusion &amp; Next Steps</strong></p>
 
