--- a/public/projects/SpotOn/index.html
+++ b/public/projects/SpotOn/index.html
@@ -91,7 +91,7 @@
 <p>SpotOn has two site experiences: Listers &amp; Parkers. They wanted to tackle the Listers side first.
 They built a prototype and wanted to validate the design before shipping. Tradecraft came onboard to help.</p>
 
-<p><a href="/images/SpotOnMeeting.jpg" data-lightbox="opportunity" data-title="Opportunity Matrix"><img src="/images/SpotOnMeeting.jpg"/></a>
+<p><img class="img-responsive img-centered" src="/images/SpotOnMeeting.jpg" alt="">
 <div class="image-caption">Reviewing The Prototype</div></p>
 
 <p><strong>Process</strong></p>
@@ -107,50 +107,48 @@ recommendations, quick wins and recommended next steps for SpotOn Parking.</p>
 
 <p>We analyzed the user tests, noting patterns and pain points. Each issue can be categorized as one of discoverability, information input/editing, user orientation or feedback.</p>
 
-<p><a href="/images/OpportunityMatrix.png" data-lightbox="opportunity" data-title="Opportunity Matrix"><img src="/images/OpportunityMatrix.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/OpportunityMatrix.png" alt="">
 <div class="image-caption">Each red dot represents a user&rsquo;s pain point</div></p>
 
 <p><strong>Usability Analysis &amp; Design Recommendations</strong></p>
 
 <p><em>Landing Page Pain Points</em></p>
 
-<p><a href="/images/BeforeLandingPage.png" data-lightbox="opportunity" data-title="Before Landing Page"><img src="/images/BeforeLandingPage.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/BeforeLandingPage.png" alt="">
 <div class="image-caption">This is what the site <em>used</em> to look like</div></p>
 
 <p><em>Design Recommendations</em></p>
 
-<p><a href="/images/AfterLandingPage.png" data-lightbox="opportunity" data-title="Design Recommendations"><img src="/images/AfterLandingPage.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/AfterLandingPage.png" alt="">
 <div class="image-caption">Minimal changes to create an optimal user experience. Overall, the landing page was a quick win.</div></p>
 
 <p><em>Implemented Changes</em></p>
 
-<p><a href="/images/SpotOnLandingPage.png" data-lightbox="opportunity" data-title="SpotOn's Landing Page"><img src="/images/SpotOnLandingPage.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/SpotOnLandingPage.png" alt="">
 <div class="image-caption">Now, users have a clearer understanding of the different spot types.</div></p>
 
 <p><em>Lister&rsquo;s Registration Page Pain Points</em></p>
 
 <p>Once a user decides they want to list a spot, they have to create a profile. Here&rsquo;s what our usability test showed users thought of the process.</p>
 
-<p><a href="/images/BeforeListers2.png" data-lightbox="opportunity" data-title="Lister's Registration Page"><img src="/images/BeforeListers2.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/BeforeListers2" alt="">
 <div class="image-caption">We found that users had the most issues with creating a spot profile.</div></p>
 
 <p><em>Design Recommendations</em></p>
 
-<p><a href="/images/AfterListers1.png" data-lightbox="opportunity" data-title="Information Box"><img src="/images/AfterListers1.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/AfterListers1.png" alt=""></p>
 
-<p><a href="/images/AfterListers4.png" data-lightbox="opportunity" data-title="Design Recommendations"><img src="/images/AfterListers4.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/AfterListers4.png" alt=""></p>
 
 <p><em>Implemented Changes</em></p>
 
-<p><a href="/images/Listers1.png" data-lightbox="opportunity" data-title="Implemented Changes"><img src="/images/Listers1.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/Listers1.png" alt="">
 <div class="image-caption">The information box lets users know immediately what they will need to create their profile.</div></p>
 
-<p><a href="/images/Listers2.png" data-lightbox="opportunity" data-title="Lister's Registration Page"><img src="/images/Listers2.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/Listers2.png" alt="">
 <div class="image-caption">Here, you can that SpotOn implemented our recommendations for simplifying the process.</div></p>
 
-<p><a href="/images/Listers4.png" data-lightbox="opportunity" data-title="Lister's Registration Page"><img src="/images/Listers4.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/Listers4.png" alt="">
 <div class="image-caption">Users can easily block off dates for spot availability.</div></p>
 
 <p><strong>Conclusion &amp; Next Steps</strong></p>
