--- a/public/projects/spotonpart2/index.html
+++ b/public/projects/spotonpart2/index.html
@@ -99,47 +99,40 @@ In <a href: "/http://www.paigebennett.com/projects/SpotOn" target=_blank">Part 1
 
 <p>We categorized each pain point as one of discoverability, information input, user orientation and feedback.</p>
 
-<p><a href="/images/Matrix.png" data-lightbox="opportunity" data-title="Opportunity Matrix"><img src="/images/Matrix.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/Matrix.png" alt="">
 <div class="image-caption">Each red dot represents a user&rsquo;s pain point</div></p>
 
 <p><strong>Usability Analysis &amp; Design Recommendations</strong></p>
 
 <p><em>Landing Page Pain Points</em></p>
 
-<p><a href="/images/Parkerspage.png" data-lightbox="opportunity" data-title="Before Landing Page"><img src="/images/Parkerspage.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/Parkerspage.png" alt=""></p>
 
 <p><em>Design Recommendations</em></p>
 
-<p><a href="/images/ParkersLandingPage.png" data-lightbox="opportunity" data-title="Design Recommendations for the Landing Page"><img src="/images/ParkersLandingPage.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/ParkersLandingPage.png" alt=""></p>
 
 <p><em>Spot Availability Page Pain Points</em></p>
 
-<p><a href="/images/spotpage_before.png" data-lightbox="opportunity" data-title="Before Spot Availability Page"><img src="/images/spotpage_before.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/spotpage_before.png" alt=""></p>
 
 <p><em>Design Recommendations</em></p>
 
-<p><a href="/images/spotpage_after.png" data-lightbox="opportunity" data-title="Design Recommendations for the Landing Page"><img src="/images/spotpage_after.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/spotpage_after.png" alt=""></p>
 
 <p><em>Parker&rsquo;s Registration Page Pain Points</em></p>
 
-<p><a href="/images/regpage_before.png" data-lightbox="opportunity" data-title="Before Parker's Registration Page"><img src="/images/regpage_before.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/regpage_before.png" alt=""></p>
 
 <p><em>Design Recommendations</em></p>
 
-<p><a href="/images/regpage_after.png" data-lightbox="opportunity" data-title="After Parker's Registration Page"><img src="/images/regpage_after.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/regpage_after.png" alt=""></p>
 
 <p><em>Quick Wins</em></p>
 
 <p>We recommended the following quick win because it required little resources and could be implemented quickly.</p>
 
-<p><a href="/images/quickwin.png" data-lightbox="opportunity" data-title="Quick Wins"><img src="/images/quickwin.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/quickwin.png" alt=""></p>
 
 <p><strong>Conclusion &amp; Next Steps</strong></p>
 
