--- a/public/projects/tightsorscarves/index.html
+++ b/public/projects/tightsorscarves/index.html
@@ -96,6 +96,8 @@
 
 <p>If you’re not familiar with whiteboarding, check out <a href="https://medium.com/@mollyinglish/the-ninja-skill-for-ux-designers-25f314f8f76c" target="_blank">this</a> awesome Medium article about the process.</p>
 
+<p><img class="img-responsive img-centered" src="/images/whiteboard.png" alt=""></p>
+
 <p><a href="/images/whiteboard.png" data-lightbox="persona" data-title="Screen Shots"><img src="/images/whiteboard.png"/></a>
 <div class="image-caption">Whiteboarding Out the App</div></p>
 
