Updated more projects with new image tags

--- a/public/projects/together10/index.html
+++ b/public/projects/together10/index.html
@@ -96,10 +96,10 @@
 
 <p>Here are some of the insides we received from the usability tests.</p>
 
-<p><a href="/images/Feedback1.png" data-lightbox="persona" data-title="Feedback"><img src="/images/Feedback1.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/Feedback1.png" alt="">
 <div class="image-caption">Some users were confused by the phone and thought Together10 was an app (it&rsquo;s not- yet)</div></p>
 
-<p><a href="/images/Feedback2.png" data-lightbox="persona" data-title="Feedback"><img src="/images/Feedback2.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/Feedback2.png" alt="">
 <div class="image-caption">As users scroll down the page, their confusion over Together10&rsquo;s purpose was reflected most in this section.</div></p>
 
 <p><strong>Design Recommendations</strong></p>
@@ -108,8 +108,7 @@
 
 <p>Our longterm option is an overall restructuring of the homepage.</p>
 
-<p><a href="/images/Together10Wireframe.png" data-lightbox="persona" data-title="Feedback"><img src="/images/Together10Wireframe.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/Together10Wireframe.png" alt=""></p>
 
 <p>This redesign addresses user feedback and is aimed at clarifying how Together10 works.</p>
 
@@ -129,14 +128,11 @@
 
 <p>Of course, most startups don&rsquo;t have the time or resources to do a complete redesign. As a second option (one that could be shipped quickly), we recommended the following small changes.</p>
 
-<p><a href="/images/QuickWin1.png" data-lightbox="persona" data-title="Quick Wins"><img src="/images/QuickWin1.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/QuickWin1.png" alt=""></p>
 
-<p><a href="/images/QuickWin2.png" data-lightbox="persona" data-title="Quick Wins"><img src="/images/QuickWin2.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/QuickWin2.png" alt=""></p>
 
-<p><a href="/images/QuickWin3.png" data-lightbox="persona" data-title="Quick Wins"><img src="/images/QuickWin3.png"/></a>
-<div class="image-caption"></div></p>
+<p><img class="img-responsive img-centered" src="/images/QuickWin3.png" alt=""></p>
 
 <p><strong>Conculusions &amp; Next Steps</strong></p>
 
