--- a/public/projects/tightsorscarves/index.html
+++ b/public/projects/tightsorscarves/index.html
@@ -96,23 +96,21 @@
 
 <p>If you’re not familiar with whiteboarding, check out <a href="https://medium.com/@mollyinglish/the-ninja-skill-for-ux-designers-25f314f8f76c" target="_blank">this</a> awesome Medium article about the process.</p>
 
-<p><img class="img-responsive img-centered" src="/images/whiteboard.png" alt=""></p>
-
-<p><a href="/images/whiteboard.png" data-lightbox="persona" data-title="Screen Shots"><img src="/images/whiteboard.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/whiteboard.png" alt="">
 <div class="image-caption">Whiteboarding Out the App</div></p>
 
 <p>I also did an exercise called six-ups, which challenges you to think of six different designs for one task.  It allowed me to take a step back and think of less conventional, more creative ways of presenting information in my app. It also gave me design options to chose from.</p>
 
 <p>Here’s how it works. We ask you how you dress in different weather and what neighborhoods you live and work in. We then take your dress preferences and using a weather API, suggest clothing based upon the weather forecast and customized to each neighborhood.</p>
 
-<p><a href="/images/screenshots.png" data-lightbox="persona" data-title="Screen Shots"><img src="/images/screenshots.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/screenshots.png" alt="">
 <div class="image-caption">A Few Screens</div></p>
 
 <p>Everyday you open your app and depending on the weather forecast, Tights or Scarves shows you whether you’ll need tights, scarves, a coat and a few quirky suggestions to keep the experience delightful.</p>
 
 <p>The premise is simple and hopefully will make dressing for SF weather easier and way more fun.</p>
 
-<p>If you have an Andriod and would like to try it out, you can download it <a href="/images/tights-or-scarf-app-1.00.05.apk" target="_blank">here</a>.</p>
+<p>If you have an Andriod and would like to try it out, you can download it <a href="/app/tights-or-scarf-app-1.00.05.apk" target="_blank">here</a>.</p>
 
 <p><em>This is an early build. It will be in the Play Store soon.</em></p>
 
