--- a/public/index.html
+++ b/public/index.html
@@ -644,7 +644,7 @@ I had used the filter icon that&rsquo;s part of Andriod design convention. Howev
                         <h2>SpotOn Part 1: Listing A Spot</h2>
                         <p class="item-intro text-muted"></p>
 
-                        <p><a href: "/http://spotonparking.com/" target=_blank">SpotOn</a> is a new startup that helps marry frustrated drivers looking for parking with people who have driveways not always. Example: I only use my driveway in the evenings. With SpotOn, I can list the spot and rent it out for X amount of money hourly or monthly. If I&rsquo;m a driver and have been searching for parking for the past hour, I can see an available spot near me thanks to SpotOn.</p>
+                        <p><a href="http://spotonparking.com/" target=_blank">SpotOn</a> is a new startup that helps marry frustrated drivers looking for parking with people who have driveways not always. Example: I only use my driveway in the evenings. With SpotOn, I can list the spot and rent it out for X amount of money hourly or monthly. If I&rsquo;m a driver and have been searching for parking for the past hour, I can see an available spot near me thanks to SpotOn.</p>
 
 <p>If you live in San Francisco (or any big city) you can imagine how a service like this could be a lifesaver for city dwellers.</p>
 
@@ -719,7 +719,7 @@ recommendations, quick wins and recommended next steps for SpotOn Parking.</p>
 
 <p>Beyond this recommendation, SpotOn also implemented our recommendations for quick wins.</p>
 
-<p><a href: "http://www.paigebennett.com/projects/spotonpart2/" target="_blank">Click here</a> for Part 2 of my work with SpotOn&rsquo;s Parkers page.</p>
+<p><a href="/projects/spotonpart2/" target="_blank">Click here</a> for Part 2 of my work with SpotOn&rsquo;s Parkers page.</p>
 
 
                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
@@ -746,10 +746,10 @@ recommendations, quick wins and recommended next steps for SpotOn Parking.</p>
                         <h2>SpotOn Part 2: Finding A Parking Spot</h2>
                         <p class="item-intro text-muted"></p>
 
-                        <p><a href: "/http://spotonparking.com/" target=_blank">SpotOn</a> is a new startup that helps marry frustrated drivers looking for parking with people who have driveways not always. Example: I only use my driveway in the evenings. With SpotOn, I can list the spot and rent it out for X amount of money hourly or monthly. If I&rsquo;m a driver and have been searching for parking for the past hour, I can see an available spot near me thanks to SpotOn.</p>
+                        <p><a href="http://spotonparking.com/" target=_blank">SpotOn</a> is a new startup that helps marry frustrated drivers looking for parking with people who have driveways not always. Example: I only use my driveway in the evenings. With SpotOn, I can list the spot and rent it out for X amount of money hourly or monthly. If I&rsquo;m a driver and have been searching for parking for the past hour, I can see an available spot near me thanks to SpotOn.</p>
 
 <p>SpotOn has two site experiences: Listers &amp; Parkers.
-In <a href: "/http://www.paigebennett.com/projects/SpotOn" target=_blank">Part 1</a>, I shared how we helped SpotOn redesign the listers site. Now, I&rsquo;ll show you how we redesigned the parkers site.</p>
+In <a href="/projects/SpotOn" target=_blank">Part 1</a>, I shared how we helped SpotOn redesign the listers site. Now, I&rsquo;ll show you how we redesigned the parkers site.</p>
 
 <p><strong>Opportunity</strong></p>
 
@@ -804,7 +804,7 @@ In <a href: "/http://www.paigebennett.com/projects/SpotOn" target=_blank">Part 1
 
 <p>SpotOn will be implementing these recommendations over time and I&rsquo;ll keep you updated as they move forward!</p>
 
-<p><a href: "http://www.paigebennett.com/projects/SpotOn/" target=_blank">Click here</a> for Part 1 of my work with SpotOn&rsquo;s Listers page.</p>
+<p><a href="/projects/SpotOn/" target=_blank">Click here</a> for Part 1 of my work with SpotOn&rsquo;s Listers page.</p>
 
 
                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
@@ -831,7 +831,7 @@ In <a href: "/http://www.paigebennett.com/projects/SpotOn" target=_blank">Part 1
                         <h2>Together10: Messaging &amp; A/B Testing</h2>
                         <p class="item-intro text-muted"></p>
 
-                        <p><a href: "http://together10.com/" target="_blank">Together10</a> is a beta site that sends parents daily, quick lessons to explore with their children. It&rsquo;s a service created with the busy parent in mind. Each lesson takes 10 minutes or less to complete and is designed around what Together10 calls the &ldquo;Together10 Advantage.&rdquo;</p>
+                        <p><a href="http://together10.com/" target="_blank">Together10</a> is a beta site that sends parents daily, quick lessons to explore with their children. It&rsquo;s a service created with the busy parent in mind. Each lesson takes 10 minutes or less to complete and is designed around what Together10 calls the &ldquo;Together10 Advantage.&rdquo;</p>
 
 <p><strong>Opportunity</strong></p>
 
