--- a/public/projects/SpotOn/index.html
+++ b/public/projects/SpotOn/index.html
@@ -82,7 +82,7 @@
         </header>
 
         <section>
-            <p><a href: "/http://spotonparking.com/" target=_blank">SpotOn</a> is a new startup that helps marry frustrated drivers looking for parking with people who have driveways not always. Example: I only use my driveway in the evenings. With SpotOn, I can list the spot and rent it out for X amount of money hourly or monthly. If I&rsquo;m a driver and have been searching for parking for the past hour, I can see an available spot near me thanks to SpotOn.</p>
+            <p><a href="http://spotonparking.com/" target=_blank">SpotOn</a> is a new startup that helps marry frustrated drivers looking for parking with people who have driveways not always. Example: I only use my driveway in the evenings. With SpotOn, I can list the spot and rent it out for X amount of money hourly or monthly. If I&rsquo;m a driver and have been searching for parking for the past hour, I can see an available spot near me thanks to SpotOn.</p>
 
 <p>If you live in San Francisco (or any big city) you can imagine how a service like this could be a lifesaver for city dwellers.</p>
 
@@ -157,7 +157,7 @@ recommendations, quick wins and recommended next steps for SpotOn Parking.</p>
 
 <p>Beyond this recommendation, SpotOn also implemented our recommendations for quick wins.</p>
 
-<p><a href: "http://www.paigebennett.com/projects/spotonpart2/" target="_blank">Click here</a> for Part 2 of my work with SpotOn&rsquo;s Parkers page.</p>
+<p><a href="/projects/spotonpart2/" target="_blank">Click here</a> for Part 2 of my work with SpotOn&rsquo;s Parkers page.</p>
 
         </section>
 
