--- a/public/projects/spotonpart2/index.html
+++ b/public/projects/spotonpart2/index.html
@@ -82,10 +82,10 @@
         </header>
 
         <section>
-            <p><a href: "/http://spotonparking.com/" target=_blank">SpotOn</a> is a new startup that helps marry frustrated drivers looking for parking with people who have driveways not always. Example: I only use my driveway in the evenings. With SpotOn, I can list the spot and rent it out for X amount of money hourly or monthly. If I&rsquo;m a driver and have been searching for parking for the past hour, I can see an available spot near me thanks to SpotOn.</p>
+            <p><a href="http://spotonparking.com/" target=_blank">SpotOn</a> is a new startup that helps marry frustrated drivers looking for parking with people who have driveways not always. Example: I only use my driveway in the evenings. With SpotOn, I can list the spot and rent it out for X amount of money hourly or monthly. If I&rsquo;m a driver and have been searching for parking for the past hour, I can see an available spot near me thanks to SpotOn.</p>
 
 <p>SpotOn has two site experiences: Listers &amp; Parkers.
-In <a href: "/http://www.paigebennett.com/projects/SpotOn" target=_blank">Part 1</a>, I shared how we helped SpotOn redesign the listers site. Now, I&rsquo;ll show you how we redesigned the parkers site.</p>
+In <a href="/projects/SpotOn" target=_blank">Part 1</a>, I shared how we helped SpotOn redesign the listers site. Now, I&rsquo;ll show you how we redesigned the parkers site.</p>
 
 <p><strong>Opportunity</strong></p>
 
@@ -140,7 +140,7 @@ In <a href: "/http://www.paigebennett.com/projects/SpotOn" target=_blank">Part 1
 
 <p>SpotOn will be implementing these recommendations over time and I&rsquo;ll keep you updated as they move forward!</p>
 
-<p><a href: "http://www.paigebennett.com/projects/SpotOn/" target=_blank">Click here</a> for Part 1 of my work with SpotOn&rsquo;s Listers page.</p>
+<p><a href="/projects/SpotOn/" target=_blank">Click here</a> for Part 1 of my work with SpotOn&rsquo;s Listers page.</p>
 
         </section>
 
