Updatd Single Blog layout

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -81,7 +81,7 @@
             <h2 class="subtitle"></h2>
         </header>
 
-        <section>
+        <section style="margin-top: 30px;">
             <h2>I'd love to hear from you!</h2>
 
 <form action="https://getsimpleform.com/messages?form_api_token=b31f239fea056c89596a288c31b1a94d" method="post">
