--- a/public/projects/SpotOn/index.html
+++ b/public/projects/SpotOn/index.html
@@ -81,7 +81,7 @@
             <h2 class="subtitle"></h2>
         </header>
 
-        <section>
+        <section style="margin-top: 30px;">
             <p><a href="http://spotonparking.com/" target=_blank">SpotOn</a> is a new startup that helps marry frustrated drivers looking for parking with people who have driveways not always. Example: I only use my driveway in the evenings. With SpotOn, I can list the spot and rent it out for X amount of money hourly or monthly. If I&rsquo;m a driver and have been searching for parking for the past hour, I can see an available spot near me thanks to SpotOn.</p>
 
 <p>If you live in San Francisco (or any big city) you can imagine how a service like this could be a lifesaver for city dwellers.</p>
