--- a/public/projects/dell-s-solar-powered-classroom-ethnography-in-kenya/index.html
+++ b/public/projects/dell-s-solar-powered-classroom-ethnography-in-kenya/index.html
@@ -81,7 +81,7 @@
             <h2 class="subtitle"></h2>
         </header>
 
-        <section>
+        <section style="margin-top: 30px;">
             <p>This project included enthopgraphy of schoolchildren in Nigeria to better understand the need for a solar powered &ldquo;classroom in a box.&rdquo;</p>
 
 <p>I will be updating this post soon to highlight user research and the end product— a classroom powered by the sun.</p>
