--- a/public/projects/ethnography-in-the-middle-east/index.html
+++ b/public/projects/ethnography-in-the-middle-east/index.html
@@ -81,7 +81,7 @@
             <h2 class="subtitle"></h2>
         </header>
 
-        <section>
+        <section style="margin-top: 30px;">
             <p>For a few years, I lived and worked in the Middle East, developing a user strategy for a small startup. Much of my job was to study how cultural beliefs impact business decision-making and public speaking.</p>
 
 <p><img class="img-responsive img-centered" src="/images/whereilived.png" alt="">
