--- a/public/projects/pinterest/index.html
+++ b/public/projects/pinterest/index.html
@@ -81,7 +81,7 @@
             <h2 class="subtitle"></h2>
         </header>
 
-        <section>
+        <section style="margin-top: 30px;">
             <p><a href="http://www.pinterest.com" target="_blank">Pinterest</a> is a website and mobile app that allows users to create visual bookmarks of everything ranging from meals to wedding inspiration to home decor. After launching in the first prototype in 2010, Pinterest has become so popular that &ldquo;pinning&rdquo; something is now woven into modern lexicon. But sometimes it can be hard to filter through pins on your main feed and find content that you&rsquo;re truly interested in.</p>
 
 <p>You currate your main feed by following pinners you like. Currently, there is no way to currate your main feed further by searching and displaying a certain cateogory from the pins of people you follow. Instead, Pinterest pulls in all pins from their entire network.</p>
