--- a/public/projects/tightsorscarves/index.html
+++ b/public/projects/tightsorscarves/index.html
@@ -81,7 +81,7 @@
             <h2 class="subtitle"></h2>
         </header>
 
-        <section>
+        <section style="margin-top: 30px;">
             <p>San Francisco has a plethora of <a href="hhttp://en.wikipedia.org/wiki/Microclimate" target="_blank">microclimates</a>.</p>
 
 <p>On any given day, you could wakeup warm and sunny at home and work and arrive at work to be greeted by cold and fog. It’s just part of life in the Bay.</p>
