--- a/public/projects/vint/index.html
+++ b/public/projects/vint/index.html
@@ -81,7 +81,7 @@
             <h2 class="subtitle"></h2>
         </header>
 
-        <section>
+        <section style="margin-top: 30px;">
             <p>My wedding is 4 months away, about the time when brides start panicking about things like invitations, caterers and the fit of their wedding dress. Me, I’m more concerned about the last issue&ndash; my wedding dress (and fitting nicely into it).</p>
 
 <p>That concern is largely want made new fitness app Vint catch my eye last week. <a href="https://www.joinvint.com/" target="_blank">Vint</a> touts itself as a “peer to peer fitness marketplace.” I was drawn to the app because of the ability to book a personal trainer in my area for less than what I would have to pay for in a gym. Since my exercise choices are largely based on time (early mornings) and location, I was excited about Vint and what it could do to help me reach my wedding fitness goal.</p>
