--- a/public/contact-thanks/index.html
+++ b/public/contact-thanks/index.html
@@ -81,7 +81,7 @@
             <h2 class="subtitle"></h2>
         </header>
 
-        <section>
+        <section style="margin-top: 30px;">
             <h2>I'll be in touch. In the meantime, check out my recent <a href="/portfolio/">projects</a>.</h2>
 
         </section>
