--- a/public/portfolio/together10/index.html
+++ b/public/portfolio/together10/index.html
@@ -81,7 +81,7 @@
             <h2 class="subtitle">A link about stuff</h2>
         </header>
 
-        <section>
+        <section style="margin-top: 30px;">
             
         </section>
 
