--- a/public/projects/together10/index.html
+++ b/public/projects/together10/index.html
@@ -81,7 +81,7 @@
             <h2 class="subtitle"></h2>
         </header>
 
-        <section>
+        <section style="margin-top: 30px;">
             <p><a href="http://together10.com/" target="_blank">Together10</a> is a beta site that sends parents daily, quick lessons to explore with their children. It&rsquo;s a service created with the busy parent in mind. Each lesson takes 10 minutes or less to complete and is designed around what Together10 calls the &ldquo;Together10 Advantage.&rdquo;</p>
 
 <p><strong>Opportunity</strong></p>
