Updated project file for new images

--- a/public/index.html
+++ b/public/index.html
@@ -404,7 +404,7 @@
 
                         <p>For a few years, I lived and worked in the Middle East, developing a user strategy for a small startup. Much of my job was to study how cultural beliefs impact business decision-making and public speaking.</p>
 
-<p><img class="img-responsive img-centered" src="/images/whereilived.png" alt="">
+<p><a href="/images/whereilived.png" data-lightbox="image-1" data-title="Map of Oman"><img class="img-responsive img-centered img-responsive-small" src="/images/whereilived.png" alt=""></a>
 <div class="image-caption">Here&rsquo;s where I lived! The lovely city of Muscat in Oman.</div></p>
 
 <p>It was a fascinating time and shaped much of my understanding of how culture impacts how you use and interpret technology.</p>
@@ -421,7 +421,7 @@
 
 <p>Here’s a tip: if you want to fail at doing business in the Middle East, rush into meetings and get down to business straight away.  The plucky expat who tries to talk about business immediately misses a very important aspect of the culture: trust.</p>
 
-<p><img class="img-responsive img-centered" src="/images/what2.jpg" alt=""></p>
+<p><a href="/images/what.jpg" data-lightbox="image-1" data-title="Business Later. Coffee Now"><img class="img-responsive img-centered img-responsive-small" src="/images/what.jpg" alt=""></a></p>
 
 <div class="image-caption">Business meetings begin with asking about family and health. This is to establish/reiterate the need for trust of the individual (as family) in order to do business.</div>
 
@@ -437,14 +437,14 @@
 
 <p>In Omani culture, problems are talked around versus talked about. This lessens the chance that someone might shame a business associate by pointing out conflict.</p>
 
-<p><img class="img-responsive img-centered" src="/images/problems.jpg" alt="">
+<p><a href="/images/problems.jpg" data-lightbox="image-1" data-title="The concept simplified."><img class="img-responsive img-centered img-responsive-small" src="/images/problems.jpg" alt=""></a>
 <div class="image-caption">The concept simplified.</div></p>
 
 <p><strong>Creating The Persona</strong></p>
 
 <p>After several weeks of research, it came time to create personas for the company we were building. Here’s one of the personas that I created:</p>
 
-<p><img class="img-responsive img-centered" src="/images/Omanpersona.png" alt="">
+<p><a href="/images/Omanpersona.png" data-lightbox="image-1" data-title="This is one of 10 personas created within the first few weeks of research."><img class="img-responsive img-centered img-responsive-small" src="/images/Omanpersona.png" alt=""></a>
 <div class="image-caption">This is one of 10 personas created within the first few weeks of research.</div></p>
 
 <p><strong>Conclusion</strong></p>
