--- a/public/projects/2015-14-pinterest/index.html
+++ b/public/projects/2015-14-pinterest/index.html
@@ -238,9 +238,6 @@ I had used the filter icon that&rsquo;s part of Andriod design convention. Howev
     
     <script src="/js/agency.js"></script>
 
-<script>document.write('<script src="http://'
-        + (location.host || 'localhost').split(':')[0]
-		+ ':1313/livereload.js?mindelay=10"></'
-        + 'script>')</script></body>
+</body>
 
 </html>
