--- a/public/projects/SpotOn/index.html
+++ b/public/projects/SpotOn/index.html
@@ -214,9 +214,6 @@ recommendations, quick wins and recommended next steps for SpotOn Parking.</p>
     
     <script src="/js/agency.js"></script>
 
-<script>document.write('<script src="http://'
-        + (location.host || 'localhost').split(':')[0]
-		+ ':1313/livereload.js?mindelay=10"></'
-        + 'script>')</script></body>
+</body>
 
 </html>
