--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">World</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">I've conducted user research in emerging countries. My ethnography work has focused on how cultural beliefs influence people's interaction with technology.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -108,7 +108,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Words</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">I began my career journey as a tv news reporter. For years, I interviewed people from all walks and told their stories. This experience has given me a deep sense of communication as key to joyful user experiences. Beautiful UI isn't enough. You must also have beautiful messaging.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -116,7 +116,7 @@
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Wanderer</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">I've lived in 4 countries, traveled to many more, and speak Arabic. From living in the jungles of Thailand to the deserts of Oman, my worldview has shaped my perspective on design and how I create user experiences. </p>
                 </div>
             </div>
         </div>
