updated logo text box

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -149,6 +149,9 @@ Southerner meets San Francisco. I began my career in a newsroom, made a home in 
     
     <script src="/js/agency.js"></script>
 
-</body>
+<script>document.write('<script src="http://'
+        + (location.host || 'localhost').split(':')[0]
+		+ ':1313/livereload.js?mindelay=10"></'
+        + 'script>')</script></body>
 
 </html>
