--- a/public/projects/tightsorscarves/index.html
+++ b/public/projects/tightsorscarves/index.html
@@ -169,6 +169,9 @@
     
     <script src="/js/agency.js"></script>
 
-</body>
+<script>document.write('<script src="http://'
+        + (location.host || 'localhost').split(':')[0]
+		+ ':1313/livereload.js?mindelay=10"></'
+        + 'script>')</script></body>
 
 </html>
