--- a/public/projects/2015-14-pinterest/index.html
+++ b/public/projects/2015-14-pinterest/index.html
@@ -238,6 +238,9 @@ I had used the filter icon that&rsquo;s part of Andriod design convention. Howev
     
     <script src="/js/agency.js"></script>
 
-</body>
+<script>document.write('<script src="http://'
+        + (location.host || 'localhost').split(':')[0]
+		+ ':1313/livereload.js?mindelay=10"></'
+        + 'script>')</script></body>
 
 </html>
