updated social links in footer`

--- a/public/projects/2015-03-ethnography-in-the-middle-east/index.html
+++ b/public/projects/2015-03-ethnography-in-the-middle-east/index.html
@@ -153,15 +153,13 @@
             </div>
             <div class="col-md-4">
                 <ul class="list-inline social-buttons">
-                    <li><a href="#"><i class="fa fa-twitter"></i></a>
+                    <li><a href="http://www.twitter.com/paigenomadgirl" target="_blank"><i class="fa fa-twitter"></i></a>
                     </li>
-                    <li><a href="#"><i class="fa fa-facebook"></i></a>
+                    <li><a href="http://www.facebook.com/paige.bennett" target="_blank"><i class="fa fa-facebook"></i></a>
                     </li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                    <li><a href="http://www.linkedin.com/in/paigebennett" target="_blank"><i class="fa fa-linkedin"></i></a>
                     </li>
-                    <li><a href="#"><i class="fa fa-github"></i></a>
-                    </li>
-                    <li><a href="#"><i class="fa fa-tumblr"></i></a>
+                    <li><a href="http://www.github.com/paigenomadgirl" target="_blank"><i class="fa fa-github"></i></a>
                     </li>
                 </ul>
             </div>
